Fix how blink::BlobDataHandle is passed across threads.

BlobDataHandle has always contained Strings, so some care needed to be
taken when passing it across threads (in practice that meant
IsolatedCopy a every getter and constructor, combined with creating a
fresh BlobDataHandle instance right before passing it across threads).
But with mojo blobs that is no longer enough (and it's kind of fragile
anyway, as BlobDataHandle was incorrectly advertising that it was safe
to pass across threads). This fixes that all by no longer marking it as
RefCountedThreadSafe, and instead introducing an explicit CopyData
method to pass its data to another thread.

Bug: 746543
Change-Id: I4e3bf2baefa2921cc740565149cc46fe74c814ea