third_party/WebKit/Source/platform/blob/BlobData.h
@@ -219,8 +219,21 @@ class PLATFORM_EXPORT BlobData {
   BlobDataItemList items_;
 };
 
-class PLATFORM_EXPORT BlobDataHandle
-    : public ThreadSafeRefCounted<BlobDataHandle> {
+// This class is needed to copy a BlobDataHandle across threads, because it
+// has some members which cannot be transferred across threads.
+struct CrossThreadBlobDataHandleData {
+  WTF_MAKE_NONCOPYABLE(CrossThreadBlobDataHandleData);
+  USING_FAST_MALLOC(CrossThreadBlobDataHandleData);
+
+ public:
+  String uuid;
+  String type;
+  long long size;
+  bool is_single_unknown_size_file;
+  storage::mojom::blink::BlobPtrInfo blob;
+};
+
+class PLATFORM_EXPORT BlobDataHandle : public RefCounted<BlobDataHandle> {
  public:
   // For empty blob construction.
   static PassRefPtr<BlobDataHandle> Create() {
@@ -240,6 +253,15 @@ class PLATFORM_EXPORT BlobDataHandle
     return AdoptRef(new BlobDataHandle(uuid, type, size));
   }
 
+  // For passing across thread boundaries.
+  static PassRefPtr<BlobDataHandle> Create(
+      std::unique_ptr<CrossThreadBlobDataHandleData> data) {
+    return AdoptRef(new BlobDataHandle(std::move(data)));
+  }
+
+  // Gets a copy of the data suitable for passing to another thread.
+  std::unique_ptr<CrossThreadBlobDataHandleData> CopyData() const;
+
   String Uuid() const { return uuid_.IsolatedCopy(); }
   String GetType() const { return type_.IsolatedCopy(); }
   unsigned long long size() const { return size_; }
@@ -252,6 +274,7 @@ class PLATFORM_EXPORT BlobDataHandle
   BlobDataHandle();
   BlobDataHandle(std::unique_ptr<BlobData>, long long size);
   BlobDataHandle(const String& uuid, const String& type, long long size);
+  BlobDataHandle(std::unique_ptr<CrossThreadBlobDataHandleData>);
 
   const String uuid_;
   const String type_;
